--- a/casundo/myapp/templates/myApp/base.html
+++ b/casundo/myapp/templates/myApp/base.html
@@ -6,23 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}CourtCentral{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/list_courts.css' %}">
     <link rel="stylesheet" href="{% static 'css/court_calendar.css' %}">
     <link rel="stylesheet" href="{% static 'css/create_reservation.css' %}">
+    <link rel="stylesheet" href="{% static 'css/auth.css' %}">
+    <link rel="stylesheet" href="{% static 'css/register_court.css' %}">
     {% block styles %}{% endblock %}
 </head>
 <body>
-    {% if not hide_navbar %}  <!-- Add this condition -->
+    {% if not hide_navbar %}
     <header>
-        {% include 'myApp/navbar.html' %}
-        <div class="navbar-nav">
-            {% if user.is_authenticated %}
-                <span class="nav-item">Welcome, {{ user.username }}</span>
-                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-            {% else %}
-                <a class="nav-link" href="{% url 'login' %}">Login</a>
-            {% endif %}
+        <div class="navbar-container">
+            <div class="navbar-logo">
+                <img src="{% static 'images/mylogo.png' %}" alt="Logo" class="navbar-logo-img">
+            </div>
+            <div class="navbar-welcome">
+                {% if user.is_authenticated %}
+                    <span class="welcome-text">{{ user.username }}</span>
+                {% endif %}
+            </div>
+            <div class="navbar-links">
+                {% include 'myApp/navbar.html' %}
+            </div>
+            <div class="navbar-logout">
+                {% if user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'logout' %}">
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                    </a>
+                {% else %}
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                {% endif %}
+            </div>
         </div>
     </header>
     {% endif %}
